// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accordion > given the accordion in the default state > then it matches the snapshot 1`] = `
"<div style="
  transition-delay: 0.1s;
  transition-duration: 0.1s
">
  <ul style="
    margin-bottom: 0px;
    margin-top: 0px;
    padding-left: 0px;
    transition-delay: 0.1s;
    transition-duration: 0.1s;
    width: 100%
  ">
    <style scoped>
      ::marker {font-size: 0px}
    </style>
    <li style="
      border-bottom: 1px solid var(--color-stroke-subtle);
      transition-delay: 0.1s;
      transition-duration: 0.1s
    ">
      <details style="
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0.1s;
        transition-duration: 0.1s
      ">
        <summary style="
          align-items: center;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-bold);
          justify-content: space-between;
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <style scoped>
            ::before {
              
            }
          </style>
          <span style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Item 1
          </span>
          <span
            hidden
            style="
              display: inline-flex;
              margin-inline-start: 8px;
              transition-delay: 0.1s;
              transition-duration: 0.1s
            "
          >
            <svg
              focusable="false"
              style="
                animation: chevron-bounce-close var(--motion-duration-medium-1)
                        var(--motion-easing-standard);
                display: inline-block;
                fill: var(
                        --details-secondary-foreground-color,
                        var(--color-foreground-secondary)
                    );
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0.1s;
                transition-duration: 0.1s;
                vertical-align: middle;
                width: 16px
              "
            >
              <use
                href="#icon-chevron-down-16"
                style="
                  transition-delay: 0.1s;
                  transition-duration: 0.1s
                "
              />
            </svg>
          </span>
        </summary>
        <div style="
          margin-bottom: 6px;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <p style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
    <li style="
      border-bottom: 1px solid var(--color-stroke-subtle);
      transition-delay: 0.1s;
      transition-duration: 0.1s
    ">
      <details style="
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0.1s;
        transition-duration: 0.1s
      ">
        <summary style="
          align-items: center;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-bold);
          justify-content: space-between;
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <style scoped>
            ::before {
              
            }
          </style>
          <span style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Item 2
          </span>
          <span
            hidden
            style="
              display: inline-flex;
              margin-inline-start: 8px;
              transition-delay: 0.1s;
              transition-duration: 0.1s
            "
          >
            <svg
              focusable="false"
              style="
                animation: chevron-bounce-close var(--motion-duration-medium-1)
                        var(--motion-easing-standard);
                display: inline-block;
                fill: var(
                        --details-secondary-foreground-color,
                        var(--color-foreground-secondary)
                    );
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0.1s;
                transition-duration: 0.1s;
                vertical-align: middle;
                width: 16px
              "
            >
              <use
                href="#icon-chevron-down-16"
                style="
                  transition-delay: 0.1s;
                  transition-duration: 0.1s
                "
              />
            </svg>
          </span>
        </summary>
        <div style="
          margin-bottom: 6px;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <p style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
    <li style="
      transition-delay: 0.1s;
      transition-duration: 0.1s
    ">
      <details style="
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0.1s;
        transition-duration: 0.1s
      ">
        <summary style="
          align-items: center;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-bold);
          justify-content: space-between;
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <style scoped>
            ::before {
              
            }
          </style>
          <span style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Item 3
          </span>
          <span
            hidden
            style="
              display: inline-flex;
              margin-inline-start: 8px;
              transition-delay: 0.1s;
              transition-duration: 0.1s
            "
          >
            <svg
              focusable="false"
              style="
                animation: chevron-bounce-close var(--motion-duration-medium-1)
                        var(--motion-easing-standard);
                display: inline-block;
                fill: var(
                        --details-secondary-foreground-color,
                        var(--color-foreground-secondary)
                    );
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0.1s;
                transition-duration: 0.1s;
                vertical-align: middle;
                width: 16px
              "
            >
              <use
                href="#icon-chevron-down-16"
                style="
                  transition-delay: 0.1s;
                  transition-duration: 0.1s
                "
              />
            </svg>
          </span>
        </summary>
        <div style="
          margin-bottom: 6px;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          transition-delay: 0.1s;
          transition-duration: 0.1s
        ">
          <p style="
            transition-delay: 0.1s;
            transition-duration: 0.1s
          ">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
  </ul>
</div>"
`;

exports[`accordion > given the accordion in the default state > when first section toggled > should open the clicked section 1`] = `
"@@ -18,14 +18,18 @@
       transition-delay: 0.1s;
       transition-duration: 0.1s
     ">
-       <details style="
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0.1s;
-         transition-duration: 0.1s
-       ">
+       <details
+         open
+         style="
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0.1s;
+           transition-duration: 0.1s
+         "
+       >
         <summary style="
           align-items: center;
+           background-color: var(--color-state-secondary-hover);
           box-sizing: border-box;
           color: var(
                   --details-summary-foreground-color,
@@ -61,6 +65,7 @@
             style="
               display: inline-flex;
               margin-inline-start: 8px;
+               transform: rotate(180deg);
               transition-delay: 0.1s;
               transition-duration: 0.1s
             "
@@ -68,8 +73,8 @@
             <svg
               focusable="false"
               style="
-                 animation: chevron-bounce-close var(--motion-duration-medium-1)
-                         var(--motion-easing-standard);
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
                 fill: var(
                         --details-secondary-foreground-color,
"
`;

exports[`accordion > given the accordion in the default state > when first section toggled > when another section is opened > should close an open section when clicked again > Should have no changes from initial 1`] = `
"@@ -26,6 +26,7 @@
       ">
         <summary style="
           align-items: center;
+           background-color: var(--color-state-secondary-hover);
           box-sizing: border-box;
           color: var(
                   --details-summary-foreground-color,
"
`;

exports[`accordion > given the accordion with autocollapse enabled > when first section toggled > should open as normal 1`] = `
"@@ -18,14 +18,18 @@
       transition-delay: 0.1s;
       transition-duration: 0.1s
     ">
-       <details style="
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0.1s;
-         transition-duration: 0.1s
-       ">
+       <details
+         open
+         style="
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0.1s;
+           transition-duration: 0.1s
+         "
+       >
         <summary style="
           align-items: center;
+           background-color: var(--color-state-secondary-hover);
           box-sizing: border-box;
           color: var(
                   --details-summary-foreground-color,
@@ -61,6 +65,7 @@
             style="
               display: inline-flex;
               margin-inline-start: 8px;
+               transform: rotate(180deg);
               transition-delay: 0.1s;
               transition-duration: 0.1s
             "
@@ -68,8 +73,8 @@
             <svg
               focusable="false"
               style="
-                 animation: chevron-bounce-close var(--motion-duration-medium-1)
-                         var(--motion-easing-standard);
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
                 fill: var(
                         --details-secondary-foreground-color,
"
`;

exports[`accordion > given the accordion with autocollapse enabled > when first section toggled > when another section is opened > should collapse previous section when new section is opened 1`] = `
"@@ -18,18 +18,14 @@
       transition-delay: 0.1s;
       transition-duration: 0.1s
     ">
-       <details
-         open
-         style="
-           overflow-x: hidden;
-           overflow-y: hidden;
-           transition-delay: 0.1s;
-           transition-duration: 0.1s
-         "
-       >
+       <details style="
+         overflow-x: hidden;
+         overflow-y: hidden;
+         transition-delay: 0.1s;
+         transition-duration: 0.1s
+       ">
         <summary style="
           align-items: center;
-           background-color: var(--color-state-secondary-hover);
           box-sizing: border-box;
           color: var(
                   --details-summary-foreground-color,
@@ -65,7 +61,6 @@
             style="
               display: inline-flex;
               margin-inline-start: 8px;
-               transform: rotate(180deg);
               transition-delay: 0.1s;
               transition-duration: 0.1s
             "
@@ -73,8 +68,8 @@
             <svg
               focusable="false"
               style="
-                 animation: chevron-bounce-open var(--motion-duration-medium-1)
-                         var(--motion-easing-standard) var(--motion-duration-short-1);
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(
                         --details-secondary-foreground-color,
@@ -123,14 +118,18 @@
       transition-delay: 0.1s;
       transition-duration: 0.1s
     ">
-       <details style="
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0.1s;
-         transition-duration: 0.1s
-       ">
+       <details
+         open
+         style="
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0.1s;
+           transition-duration: 0.1s
+         "
+       >
         <summary style="
           align-items: center;
+           background-color: var(--color-state-secondary-hover);
           box-sizing: border-box;
           color: var(
                   --details-summary-foreground-color,
@@ -166,6 +165,7 @@
             style="
               display: inline-flex;
               margin-inline-start: 8px;
+               transform: rotate(180deg);
               transition-delay: 0.1s;
               transition-duration: 0.1s
             "
@@ -173,8 +173,8 @@
             <svg
               focusable="false"
               style="
-                 animation: chevron-bounce-close var(--motion-duration-medium-1)
-                         var(--motion-easing-standard);
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
                 fill: var(
                         --details-secondary-foreground-color,
"
`;
